# vulkanalia

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp  shader.vert  test.cpp  triangle.cpp  triangle.hpp
cmake/: glfw.cmake.in  glm.cmake.in  gtest.cmake.in  stb.cmake.in  tinyobjloader.cmake.in
